refactor(sessions): migrate to new session architecture with streaming support
- Replace ChatResponse run methods with streaming-based implementations
- Introduce SessionOptions for configuring session behavior
- Add ConversationSession and SessionExecutor interfaces for better separation of concerns
- Update AgentSession to extend ConversationSession and SessionExecutor
- Modify context providers to use ConversationSession instead of AgentSession
- Implement proper session lifecycle management with close and isClosed methods
- Update all agent implementations to use new session creation pattern
- Refactor orchestration builders to use streaming responses instead of blocking calls
- Remove deprecated HistoryProvider interface and related functionality
- Update sample applications to work with new session architecture
- Add proper metadata handling in session implementations